{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 59,
  "lineage": "fa91c5e4-7d95-8805-a811-3627db1d9375",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:392434638158:route-table/rtb-0978984ac52006e50",
            "default_route_table_id": "rtb-0978984ac52006e50",
            "id": "rtb-0978984ac52006e50",
            "owner_id": "392434638158",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01213e5268b01042b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev    -main-rtb"
            },
            "tags_all": {
              "Name": "dev    -main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4aeb1b7462ae262"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-app-internet-gateway",
            "aws_vpc.demo-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8a34246278c21e4",
            "arn": "arn:aws:ec2:us-east-1:392434638158:instance/i-06300d93e69cb1cfb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06300d93e69cb1cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091009e34ddbec138",
            "private_dns": "ip-10-0-10-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.33",
            "public_ip": "54.208.163.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00fcf1cee62cb9d01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c813476322f3a8de",
            "tags": {
              "Name": "dev    -server"
            },
            "tags_all": {
              "Name": "dev    -server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f604e72c139a980"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.demo-app-aws_security_group",
            "aws_subnet.demo-app-subnet-1",
            "aws_vpc.demo-app-vpc",
            "data.aws_ami.latest_linux_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-app-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:392434638158:internet-gateway/igw-01213e5268b01042b",
            "id": "igw-01213e5268b01042b",
            "owner_id": "392434638158",
            "tags": {
              "Name": "dev    -internet-gateway"
            },
            "tags_all": {
              "Name": "dev    -internet-gateway"
            },
            "vpc_id": "vpc-0a4aeb1b7462ae262"
          },
          "dependencies": [
            "aws_vpc.demo-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-app-aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:392434638158:security-group/sg-01f604e72c139a980",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f604e72c139a980",
            "ingress": [
              {
                "cidr_blocks": [
                  "196.235.47.127/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "196.235.47.127/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "demo-app-sg",
            "name_prefix": "",
            "owner_id": "392434638158",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev    -security-group"
            },
            "tags_all": {
              "Name": "dev    -security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4aeb1b7462ae262"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:392434638158:subnet/subnet-0c813476322f3a8de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c813476322f3a8de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "392434638158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev    -subnet-1"
            },
            "tags_all": {
              "Name": "dev    -subnet-1"
            },
            "vpc_id": "vpc-0a4aeb1b7462ae262"
          },
          "dependencies": [
            "aws_vpc.demo-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:392434638158:vpc/vpc-0a4aeb1b7462ae262",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b67ba1953f99116",
            "default_route_table_id": "rtb-0978984ac52006e50",
            "default_security_group_id": "sg-0cd80cbd8e7cba833",
            "dhcp_options_id": "dopt-0122bfbc744da568d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4aeb1b7462ae262",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0978984ac52006e50",
            "owner_id": "392434638158",
            "tags": {
              "Name": "dev    -vpc"
            },
            "tags_all": {
              "Name": "dev    -vpc"
            }
          }
        }
      ]
    }
  ]
}